add book section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,9 @@ main:
   - title: "Talks"
     url: /talks/    
 
+  - title: "Books"
+    url: /books/
+
   # - title: "Teaching"
   #   url: /teaching/    
     
