--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "zoezyn/zoezyn.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile2.jpg"
+  avatar           : "profile.jpg"
   name             : "Zoe Yan"
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist | AI Engineer"
